--- a/css/app.css
+++ b/css/app.css
@@ -56,10 +56,13 @@ img{
     gap: 25px;
 }
 .button{
-    border: 1px solid white;
-    background-color: white;
+    border: 1px solid;
     border-radius: 20px;
     padding: 10px;
+}
+.white-button{
+    background-color: white;
+    border-color: white;
 }
 .container-text{
     display: flex;
@@ -94,6 +97,11 @@ img{
     font-size: 15px;
     line-height: 25px;
 }
+.violet{
+    background-color: #7288da;
+    border-color: #7288da;
+    color: white;
+}
 .col-16{
     flex-basis: calc(100%/6);
 }
@@ -111,11 +119,12 @@ img{
     text-align: center;
 }
 .bg-gray{
-    background-color: lightgray;
+    background-color: rgb(232, 230, 230);
 }
 .border-last{
     border-top: 2px solid white;
 }
+
 
 
 /* debug  */
