--- a/css/app.css
+++ b/css/app.css
@@ -46,9 +46,6 @@ img{
     background-size: cover;
     padding: 20px; 
 }
-.logo-wrapper{
-    min-height: 20px;
-}
 .list-header{
     display: flex;
     flex-direction: row;
@@ -107,6 +104,7 @@ img{
 }
 .col-33{
     flex-basis: calc(100%/3);
+    line-height: 30px;
 }
 .col-40{
     flex-basis: 40%;
@@ -122,7 +120,32 @@ img{
     background-color: rgb(232, 230, 230);
 }
 .border-last{
-    border-top: 2px solid white;
+    border-top: 1px solid #7288da;
+}
+.text-violet{
+   color: #7288da; 
+   font-size: 15px;
+}
+.text-icon{
+    font-size: 20px;
+}
+.text-list{
+    font-size: 15px;
+    color: white;
+    line-height: 30px;
+}
+.icon{
+    max-width: 20px;
+    display: inline-block;
+}
+ul:first-child{
+    font-size: 15px;
+}
+.margin-top{
+    margin-top: 8px;
+}
+#button-small{
+   font-size: 10px;
 }
 
 
